--- a/src/coponents/User.css
+++ b/src/coponents/User.css
@@ -6,4 +6,5 @@
     border: 2px solid #000; /* Параметры рамки */
     -moz-box-sizing: border-box; /* Для Firefox */  
     box-sizing: border-box; /* Ширина блока с полями */
+    margin: auto;
    }
