--- a/src/coponents/View.css
+++ b/src/coponents/View.css
@@ -1,5 +1,5 @@
 .box { 
-    background: rgb(103, 131, 67); /* Цвет фона */
+    background: #acb2ee; /* Цвет фона */
     width: 300px; /* Ширина блока */
     padding: 10px; /* Поля */
     margin-top: 10px; /* Отступ сверху */
