--- a/src/coponents/ConnectForm.css
+++ b/src/coponents/ConnectForm.css
@@ -11,3 +11,50 @@
 input {
     background: #979dd7; /* Цвет фона */
 }
+
+/*popup */
+.App {
+    text-align: center;
+}
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+}
+
+.popup {
+    margin: 70px auto;
+    padding: 20px;
+    /* background: #fff; */
+    background-color:  rgba(105, 101, 95, 0.568);
+    border-radius: 5px;
+    width: 500px;
+    position: relative;
+    transition: all 5s ease-in-out;
+}
+
+.popup h2 {
+    margin-top: 0;
+    color: #333;
+    font-family: Tahoma, Arial, sans-serif;
+}
+.popup .close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    transition: all 200ms;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #333;
+}
+.popup .close:hover {
+    color: #06D85F;
+}
+.popup .content {
+    max-height: 30%;
+    overflow: auto;
+}
