--- a/src/coponents/css/Announcement.css
+++ b/src/coponents/css/Announcement.css
@@ -1,8 +1,7 @@
-.add {
+.box {
     background: #acb2ee; /* Цвет фона */
     width: 300px; /* Ширина блока */
     padding: 10px; /* Поля */
-    margin-top: 10px; /* Отступ сверху */
     border: 2px solid #000; /* Параметры рамки */
     -moz-box-sizing: border-box; /* Для Firefox */
     box-sizing: border-box; /* Ширина блока с полями */
