--- a/src/App.css
+++ b/src/App.css
@@ -2,28 +2,16 @@
   text-align: center;
 }
 
+body {
+  margin:0;
+}
 
-/* 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
-
-/* 
-@import url(https://fonts.googleapis.com/css?family=Lora);
-body {margin:0;} */
 h2 {
   font-family: monospace;
   color: #606060;
 }
 ul {
-  list-style: none; 
+  list-style: none;
   margin: 0 auto;
 }
 link {
@@ -40,16 +28,92 @@ nav {
   margin: 0 auto 30px;
 }
 
-.mainMenu li {
-    display: inline-block;
-  }
-  .mainMenu a {
+  .main-menu a {
     padding: 1em;
     display: block;
     color: #5b5e7e;
-    border-right: 1px solid #979dd7;
-    background: rgba(164, 174, 221, 0.3);
   }
-  .mainMenu a:hover {background: #979dd7
+  .main-menu li:hover {background: #979dd7
   }
+
+
+
+  /*need*/
+
+nav {
+  display: table;
+  margin: 0 auto;
+}
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.main-menu {
+  display: flex;
+  padding: 0;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 100px;
+  margin-top:10px;
+}
+
+
+.main-menu:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.main-menu > li {
+  position: relative;
+  font-family: 'Open Sans', sans-serif;
+  background: rgba(164, 174, 221, 0.3);
+  margin-left:10px;
+  border: 1px solid #c9ddf7;
+  border-radius: 5px;
+
+}
+.main-menu > li > a {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: bold;
+  color: #404040;
+  padding: 15px 30px;
+}
+.main-menu li a:hover { color: #D5B45B; }
+.submenu-link:after {
+  font-family: "FontAwesome";
+  color: inherit;
+  margin-left: 10px;
+}
+.submenu {
+  background: rgba(164, 174, 221, 0.3);
+  position: absolute;
+  left: 0;
+  top: 100%;
+  z-index: 5;
+  opacity: 0;
+  transform: scaleY(0);
+  transform-origin: 0 0;
+  transition: .5s ease-in-out;
+  padding: 0;
+  width: 100%;
+  border: 1px solid #c9ddf7;
+  border-radius: 5px;
+
+}
+.submenu a {
+  color: white;
+  text-align: left;
+  padding: 0 10px 0 10px;
+  font-size: 13px;
+
+}
+.submenu li:last-child a { border-bottom: none; }
+.main-menu > li:hover .submenu {
+  opacity: 1;
+  width: 100%;
+  transform: scaleY(1);
+}
 
