--- a/src/coponents/css/AddAnnouncement.css
+++ b/src/coponents/css/AddAnnouncement.css
@@ -2,10 +2,11 @@
     background: #acb2ee;
     width: 300px;
     padding: 10px;
-    border: 2px solid #000;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: auto;
+    border: 1px solid #c9ddf7;
+    border-radius: 5px;
 }
 input {
     background: #979dd7;
