--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,20 @@
-.App {
-  text-align: center;
+/*.App {*/
+  /*text-align: center;*/
+/*}*/
+
+/*body {*/
+  /*margin:0;*/
+/*}*/
+
+/*h2 {*/
+  /*font-family: monospace;*/
+  /*color: #606060;*/
+/*}*/
+
+.ico {
+  width: 12%;
 }
 
-body {
-  margin:0;
-}
-
-h2 {
-  font-family: monospace;
-  color: #606060;
-}
 ul {
   list-style: none;
   margin: 0 auto;
@@ -83,7 +88,7 @@ nav ul {
 }
 .main-menu li a:hover { color: #D5B45B; }
 .submenu-link:after {
-  font-family: "FontAwesome";
+  /*font-family: "FontAwesome";*/
   color: inherit;
   margin-left: 10px;
 }
