--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
-  background-color: rgba(177, 173, 169, 0.74);
+ background-color: rgba(177, 173, 169, 0.74);
+  /*background: linear-gradient(to top, rgba(72, 68, 65, 0.74) , rgba(177, 173, 169, 0.74));*/
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
