--- a/src/coponents/css/Home.css
+++ b/src/coponents/css/Home.css
@@ -22,8 +22,8 @@ OwlCarousel.navText {
     size: 15cm;
 }
 
-.TOP {
-    height: 25px ;
+.top {
+
     display: block;
     margin: auto;
     color: #5b5e7e
